# hydra-firmware

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  PLAN.md  README.md
.github/workflows/: ci.yml
buildroot/: Config.in  external.desc  external.mk
buildroot/board/hydra/: genimage.cfg  post-build.sh  post-image.sh
buildroot/configs/: hydra_cm5_defconfig
buildroot/package/hydra-host/: Config.in  hydra-host.mk
buildroot/package/hydra-ui/: Config.in  hydra-ui.mk
buildroot/rootfs-overlay/etc/hydra/: hydra.toml
config/: hydra-default.toml
config/systemd/: hydra-host.service  hydra-ui.service
docs/: architecture.md  protocol.md
host/: CMakeLists.txt
host/src/: main.cpp
host/src/comms/: clock_sync.cpp  clock_sync.h  mcu_proxy.cpp  mcu_proxy.h  protocol.cpp  protocol.h  transport.cpp  transport.h
host/src/core/: checkpoint.cpp  checkpoint.h  config.cpp  config.h  engine.cpp  engine.h  ota.cpp  ota.h
host/src/drivers/: tmc_config.cpp  tmc_config.h
host/src/files/: file_manager.cpp  file_manager.h
host/src/gcode/: command.h  parser.cpp  parser.h  stream.cpp  stream.h  sync_engine.cpp  sync_engine.h
host/src/motion/: calibration.cpp  calibration.h  collision.cpp  collision.h  corexy.cpp  corexy.h  frame_decompose.cpp  frame_decompose.h  homing.cpp  homing.h  nozzle_offset.cpp  nozzle_offset.h  planner.cpp  planner.h  step_compress.cpp  step_compress.h  trapezoid.cpp  trapezoid.h
host/src/thermal/: heater.cpp  heater.h  pid.cpp  pid.h  safety.cpp  safety.h  thermistor.cpp  thermistor.h
host/src/web/: server.cpp  server.h
host/tests/: CMakeLists.txt  test_gcode_parser.cpp  test_sync_engine.cpp
mcu/: CMakeLists.txt
mcu/pio/: step_dir_sr.pio  tmc_uart.pio
mcu/src/: adc.c  adc.h  config.h  gpio.c  gpio.h  main.c  pins.h  protocol.c  protocol.h  stepper.c  stepper.h  tmc_uart.c  tmc_uart.h  transport.c  transport.h  valve_control.c  valve_control.h  watchdog.c  watchdog.h
shared/: error_codes.h  protocol_defs.h  version.h
ui/: CMakeLists.txt  index.html  main.cpp  package-lock.json  package.json  vite.config.ts
ui/qml/: Main.qml  Theme.qml
ui/qml/components/: NozzleIndicator.qml  ProgressArc.qml  StatusBar.qml  TempGauge.qml
ui/qml/pages/: FilesPage.qml  HomePage.qml  MovePage.qml  NetworkPage.qml  PreparePage.qml  PrintPage.qml  SettingsPage.qml  TemperaturePage.qml  TunePage.qml
ui/resources/: resources.qrc
ui/src/: App.tsx  index.css
ui/src/backend/: bridge.h
ui/src/components/: FilamentChangeDialog.tsx  StatusBar.tsx  TempGauge.tsx
ui/src/hooks/: usePrinter.ts
ui/src/pages/: FilesPage.tsx  HomePage.tsx  MovePage.tsx  NetworkPage.tsx  PreparePage.tsx  PrintPage.tsx  SettingsPage.tsx
